--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,24 +1,14 @@
+.Nav-Container {
+  margin: 0 auto;
+  width: 960px;
+}
+
+.Nav {
+  float: left;
+  height: 100%;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  float: left;
+  margin-left: 100px;
 }
