--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,9 +6,89 @@
 .Nav {
   float: left;
   height: 100%;
+  border: 1px solid;
 }
 
 .App {
   float: left;
-  margin-left: 100px;
+  margin-left: 50px;
+  border: 1px solid;
+  width: 656px;
+}
+
+ul {
+  list-style-type: none;
+  line-height: 44px
+}
+
+.link {
+  color: black;
+  text-decoration: none;
+}
+
+.link:hover {
+  color: black;
+  text-decoration: none;
+}
+
+/* 
+  body styles
+*/
+.image {
+  width: 656px;
+}
+
+.mobile-image {
+  width: 200px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.github {
+  width: 35px;
+  padding-top: 20px;
+  padding-right: 20px;
+}
+
+.github-container {
+  float: right;
+}
+
+.title-container {
+  float: left;
+}
+
+.description {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+/* 
+  centering multiple imgs
+*/
+
+.container {
+  width: 600px;
+  margin-left: auto; 
+  margin-right: auto;
+
+   text-align: justify;
+  -ms-text-justify: distribute-all-lines;
+  text-justify: distribute-all-lines;
+}
+
+.container a {
+  vertical-align: top;
+  display: inline-block;
+  *display: inline;
+  zoom: 1;
+}
+
+.stretch {
+    width: 100%;
+    display: inline-block;
+    font-size: 0;
+    line-height: 0
 }
