--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,13 +6,13 @@
 .Nav {
   float: left;
   height: 100%;
-  border: 1px solid;
+  border: 0px solid;
 }
 
 .App {
   float: left;
   margin-left: 50px;
-  border: 1px solid;
+  border: 0px solid;
   width: 656px;
 }
 
@@ -91,4 +91,36 @@ ul {
     display: inline-block;
     font-size: 0;
     line-height: 0
+}
+
+/*
+  home styles
+*/
+.profile {
+  border-radius: 50%;
+  height: 200px;
+  margin: 0 0 0 15px;
+}
+
+.icon {
+  height: 20px;
+  width: 20px;
+  object-fit: cover;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.icon-container {
+  padding-left: 220px;
+}
+
+.about-left {
+  display: inline-block;
+}
+
+.about-right {
+  display: inline-block;
+  width: 380px;
+  text-align: left;
+  margin-left: 30px;
 }
