--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,7 +18,10 @@
 
 ul {
   list-style-type: none;
-  line-height: 44px
+  line-height: 44px;
+  font-size: 19px;
+  letter-spacing: 1px;
+  font-family: 'Gloria Hallelujah', "Josefin Sans", "Open Sans", "Helvetica Neue", cursive;
 }
 
 .link {
@@ -111,16 +114,61 @@ ul {
 }
 
 .icon-container {
-  padding-left: 220px;
+  display: inline-block;
+  margin-left: 80px;
 }
 
 .about-left {
   display: inline-block;
+  vertical-align: top;
 }
 
 .about-right {
   display: inline-block;
+  vertical-align: top;
   width: 380px;
   text-align: left;
   margin-left: 30px;
+}
+
+.home-title-container {
+  display: inline-block;
+  width: 400px;
+}
+
+/*
+  fonts
+*/
+
+p {
+  font-family: "Josefin Sans", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 28px;
+  color: #AAB2AA;
+  font-weight: 300;
+}
+
+h2 {
+  font-family: "Josefin Sans", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 36px;
+  line-height: 28px;
+  color: #374837;
+  font-weight: 100;
+  letter-spacing: .7px;
+}
+
+h1 {
+  list-style-type: none;
+  line-height: 44px;
+  font-size: 26px;
+  letter-spacing: 0px;
+  font-family: 'Gloria Hallelujah', "Josefin Sans", "Open Sans", "Helvetica Neue", cursive;
+}
+
+h3 {
+  list-style-type: none;
+  line-height: 44px;
+  font-size: 18px;
+  letter-spacing: 0px;
+  font-family: 'Gloria Hallelujah', "Josefin Sans", "Open Sans", "Helvetica Neue", cursive;
 }
