--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,8 +5,8 @@
 
 .Nav {
   float: left;
-  height: 100%;
   border: 0px solid;
+  width: 150px;
 }
 
 .App {
@@ -16,12 +16,20 @@
   width: 656px;
 }
 
+.App-expand {
+  float: left;
+  margin-left: 50px;
+  border: 0px solid;
+  width: 750px;
+}
+
 ul {
   list-style-type: none;
+  padding: 0;
   line-height: 44px;
   font-size: 19px;
   letter-spacing: 1px;
-  font-family: 'Gloria Hallelujah', "Josefin Sans", "Open Sans", "Helvetica Neue", cursive;
+  font-family: 'Gloria Hallelujah', "Roboto", "Open Sans", "Helvetica Neue", cursive;
 }
 
 .link {
@@ -30,8 +38,24 @@ ul {
 }
 
 .link:hover {
-  color: black;
+  color: #86A3A3;
   text-decoration: none;
+}
+
+/* 
+  header
+*/
+.header {
+  padding-top: 40px;
+}
+
+/* 
+  bear inlay
+*/
+.bear {
+  width: 180px;
+  margin-left: -15px;
+  margin-top: 40px;
 }
 
 /* 
@@ -55,6 +79,11 @@ ul {
 
 .github-container {
   float: right;
+  padding-top: 5px;
+}
+
+.github-container:hover {
+  padding-top: 2px;
 }
 
 .title-container {
@@ -101,8 +130,8 @@ ul {
 */
 .profile {
   border-radius: 50%;
-  height: 200px;
-  margin: 0 0 0 15px;
+  height: 155px;
+  margin: 24px 0 0 15px;
 }
 
 .icon {
@@ -113,6 +142,10 @@ ul {
   margin-right: 10px;
 }
 
+.icon:hover {
+  border-bottom: 2px solid white;
+}
+
 .icon-container {
   display: inline-block;
   margin-left: 80px;
@@ -121,6 +154,7 @@ ul {
 .about-left {
   display: inline-block;
   vertical-align: top;
+  margin-left: -15px;
 }
 
 .about-right {
@@ -141,15 +175,16 @@ ul {
 */
 
 p {
-  font-family: "Josefin Sans", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-family: "Roboto", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 13px;
   line-height: 28px;
-  color: #AAB2AA;
+  color: #627878;
   font-weight: 300;
+  letter-spacing: .5px
 }
 
 h2 {
-  font-family: "Josefin Sans", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Roboto", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 36px;
   line-height: 28px;
   color: #374837;
@@ -162,7 +197,7 @@ h1 {
   line-height: 44px;
   font-size: 26px;
   letter-spacing: 0px;
-  font-family: 'Gloria Hallelujah', "Josefin Sans", "Open Sans", "Helvetica Neue", cursive;
+  font-family: 'Gloria Hallelujah', "Roboto", "Open Sans", "Helvetica Neue", cursive;
 }
 
 h3 {
@@ -170,5 +205,58 @@ h3 {
   line-height: 44px;
   font-size: 18px;
   letter-spacing: 0px;
-  font-family: 'Gloria Hallelujah', "Josefin Sans", "Open Sans", "Helvetica Neue", cursive;
+  font-family: 'Gloria Hallelujah', "Roboto", "Open Sans", "Helvetica Neue", cursive;
+}
+
+h4 {
+  list-style-type: none;
+  line-height: 44px;
+  font-size: 18px;
+  letter-spacing: 0px;
+  font-family: "Roboto", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+/*
+  project nav
+*/
+.projects-container {
+   text-align: justify;
+  -ms-text-justify: distribute-all-lines;
+  text-justify: distribute-all-lines;
+  margin-top: -10px;
+}
+.project-container {
+  text-align: center;
+  display: inline-block;
+  width: 200px;
+  margin-right: 50px;
+}
+.crop-container {
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+  border: .5px solid #D1DEDE;
+  display: inline-block;
+  text-align: center;
+  margin-top: -20px;
+}
+.crop-container:hover {
+  border: .5px solid black;
+}
+.crop-img {
+  width: 200px;
+  object-fit: cover;
+  margin-top: -40px
+}
+.crop-img-web {
+  width: 450px;
+  object-fit: cover;
+  margin-top: 10px;
+}
+.crop-img-web2 {
+  width: 600px;
+  object-fit: cover;
+  margin-top: 0px;
+  margin-left: -202px
 }
